Bug 1655947 - Change date parsing to be more consistent. r=jorendorff

Differential Revision: https://phabricator.services.mozilla.com/D87458